# epd-clock

./: Cargo.toml  LICENSE  Makefile.toml  README.md  justfile
.cargo/: config
app/: Cargo.toml
app/src/: lib.rs
clocks/: Cargo.toml
clocks/rpi_epd2in13/: Cargo.toml
clocks/src/: analog_clock.rs  lib.rs
rpi/: Cargo.toml
rpi/.cargo/: config
rpi/src/: main.rs  my_ep_display.rs  rpi_zero_main.rs
rpi_epd2in13/: Cargo.toml
rpi_epd2in13/src/: lib.rs  my_ep_display.rs
simulator/: Cargo.toml
simulator/.cargo/: config
simulator/src/: main.rs
src/: draw_date_time.rs  main.rs  my_ep_display.rs
